<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Fragment3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="0pt"
        android:textColor="#000000"
        android:text="@string/nim"
        android:textSize="8pt" />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="230dp"
        android:ems="10"
        android:inputType="text" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="0pt"
        android:textColor="#000000"
        android:text="@string/jurusan"
        android:textSize="8pt" />
    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="230dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="0pt"
        android:textColor="#000000"
        android:text="@string/no"
        android:textSize="8pt" />
    <EditText
        android:id="@+id/editText3"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="230dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="0pt"
        android:textColor="#000000"
        android:text="@string/email"
        android:textSize="8pt" />
    <EditText
        android:id="@+id/editText4"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="230dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="0pt"
        android:textColor="#000000"
        android:text="@string/web"
        android:textSize="8pt" />
    <EditText
        android:id="@+id/editText5"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="230dp"
        android:ems="10"
        android:inputType="text" />

</FrameLayout>