<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8DDB5"
    tools:context=".Fragment1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="0dp"
        android:text="@string/posting"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="7pt" />

    <TextView
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:text="100"
        android:textColor="#000000"
        android:textSize="10pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pengikut"
        android:layout_marginLeft="168dp"
        android:layout_marginRight="0dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="7pt" />

    <TextView
        android:layout_width="378dp"
        android:layout_height="30dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="50dp"
        android:text="250"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="10pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="320dp"
        android:layout_marginRight="0dp"
        android:textAlignment="center"
        android:text="@string/mengikuti"
        android:textColor="#000000"
        android:textSize="7pt" />

    <TextView
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="310dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:text="250"
        android:textColor="#000000"
        android:textSize="10pt" />

</FrameLayout>